SOS-1866 Private Messaging: Styling bug when search iterator top navigation is visible

--- a/themes/so-strata-theme/docroot/_diffs/css/color_schemes/normal/normal.css
+++ b/themes/so-strata-theme/docroot/_diffs/css/color_schemes/normal/normal.css
@@ -1630,10 +1630,6 @@ div#navigation {
 		text-decoration: none;
 	}
 
-	.taglib-search-iterator-page-iterator-bottom {
-		padding: 10px;
-	}
-
 	.messages-content {
 		min-height: 400px;
 	}
